Central Theme: Constrain WordCamp screenshot image to prevent overlapping content
Fixes https://meta.trac.wordpress.org/ticket/4566
Props donmhico

--- a/public_html/wp-content/themes/wordcamp-central-2012/style.css
+++ b/public_html/wp-content/themes/wordcamp-central-2012/style.css
@@ -1863,6 +1863,7 @@ li:after { content: "."; display: block; height: 0; clear: both; visibility: hid
 .single-wordcamp .wc-single-website img {
 	display: block;
 	margin: 0 auto 5px;
+	width: inherit;
 	border: 7px #fff solid;
 	box-sizing: border-box;
 	box-shadow: 0px 2px 5px #75888a;
